# hranol

./: CMakeLists.txt  Implementation-README.md  LICENSE  README.md
examples/particles/run2/: snimek000000.tiff  snimek000001.tiff  snimek000002.tiff  snimek000003.tiff  snimek000004.tiff  snimek000005.tiff  snimek000006.tiff  snimek000007.tiff  snimek000008.tiff  snimek000009.tiff  snimek000010.tiff  snimek000011.tiff  snimek000012.tiff  snimek000013.tiff  snimek000014.tiff  snimek000015.tiff  snimek000016.tiff  snimek000017.tiff  snimek000018.tiff  snimek000019.tiff  snimek000020.tiff  snimek000021.tiff  snimek000022.tiff  snimek000023.tiff  snimek000024.tiff  snimek000025.tiff  snimek000026.tiff  snimek000027.tiff  snimek000028.tiff  snimek000029.tiff  snimek000030.tiff  snimek000031.tiff  snimek000032.tiff  snimek000033.tiff  snimek000034.tiff  snimek000035.tiff  snimek000036.tiff  snimek000037.tiff  snimek000038.tiff  snimek000039.tiff
hranol/: CMakeLists.txt  HranolException.h  ImageStore.cpp  crawler_test.cpp  filter.h  hranol.cpp
src/: CMakeLists.txt  Filter.h  FolderCrawler.cpp  FolderCrawler.h  HranolException.h  ImageProcessor.cpp  ImageProcessor.h  ImageStore.cpp  ImageStore.h  hranol.cpp
